--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">HDK</string>
     <string name="database_name">hdk.db</string>
+    <string name="subscription_key">3aeb4b55cc804054b606a55660b0ea8e</string>
+    <string name="faceSubscription_key">ded0e33365cd4c199f3e397939a2d7ec</string>
 </resources>
